# demystifyopenclaw

./: benchmarking.html  benchmarking.html.md  index.html  index.html.md  openclaw_project_plan_v3.md  pyproject.toml  robots.txt  search.json  setup.html  setup.html.md  sitemap.xml
data/: bfcl_simple_mapped.json  gaia_subset.json
demystifyopenclaw/: _modidx.py  baseline.py  config.py  core.py
nbs/: 00_core.ipynb  00_setup.ipynb  01_baseline.ipynb  01_benchmarking.ipynb  index.ipynb  nbdev.yml  sidebar.yml
