[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "demystifyopenclaw"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Hiroshi Doyu", email = "hiroshi.doyu@ninjalabo.ai"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pandas",
    "python-dotenv",
    "nanobot-ai",
    "datasets"
]

[project.urls]
Repository = "https://github.com/ninjalabo/demystifyopenclaw"
Documentation = "https://ninjalabo.github.io/demystifyopenclaw/"

[project.entry-points.nbdev]
demystifyopenclaw = "demystifyopenclaw._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "demystifyopenclaw.__version__"}

[tool.setuptools.packages.find]
include = ["demystifyopenclaw"]

[tool.nbdev]
